// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should match the snapshot when closed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Modal
    open={false}
    text="Modal test text"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div>
        <styled.i
          className="material-icons"
          onClick={undefined}
        >
          close
        </styled.i>
        <h2>
          Hello yes helloooo
        </h2>
        <p>
          Modal test text
        </p>
      </styled.div>,
      "className": "closed",
      "id": "hello",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.i
            className="material-icons"
            onClick={undefined}
          >
            close
          </styled.i>,
          <h2>
            Hello yes helloooo
          </h2>,
          <p>
            Modal test text
          </p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "close",
            "className": "material-icons",
            "onClick": undefined,
          },
          "ref": null,
          "rendered": "close",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Hello yes helloooo",
          },
          "ref": null,
          "rendered": "Hello yes helloooo",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Modal test text",
          },
          "ref": null,
          "rendered": "Modal test text",
          "type": "p",
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div>
          <styled.i
            className="material-icons"
            onClick={undefined}
          >
            close
          </styled.i>
          <h2>
            Hello yes helloooo
          </h2>
          <p>
            Modal test text
          </p>
        </styled.div>,
        "className": "closed",
        "id": "hello",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.i
              className="material-icons"
              onClick={undefined}
            >
              close
            </styled.i>,
            <h2>
              Hello yes helloooo
            </h2>,
            <p>
              Modal test text
            </p>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "close",
              "className": "material-icons",
              "onClick": undefined,
            },
            "ref": null,
            "rendered": "close",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Hello yes helloooo",
            },
            "ref": null,
            "rendered": "Hello yes helloooo",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Modal test text",
            },
            "ref": null,
            "rendered": "Modal test text",
            "type": "p",
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Modal should match the snapshot when open 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Modal
    open={true}
    text="Modal test text"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div>
        <styled.i
          className="material-icons"
          onClick={undefined}
        >
          close
        </styled.i>
        <h2>
          Hello yes helloooo
        </h2>
        <p>
          Modal test text
        </p>
      </styled.div>,
      "className": "open",
      "id": "hello",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.i
            className="material-icons"
            onClick={undefined}
          >
            close
          </styled.i>,
          <h2>
            Hello yes helloooo
          </h2>,
          <p>
            Modal test text
          </p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "close",
            "className": "material-icons",
            "onClick": undefined,
          },
          "ref": null,
          "rendered": "close",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Hello yes helloooo",
          },
          "ref": null,
          "rendered": "Hello yes helloooo",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Modal test text",
          },
          "ref": null,
          "rendered": "Modal test text",
          "type": "p",
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div>
          <styled.i
            className="material-icons"
            onClick={undefined}
          >
            close
          </styled.i>
          <h2>
            Hello yes helloooo
          </h2>
          <p>
            Modal test text
          </p>
        </styled.div>,
        "className": "open",
        "id": "hello",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.i
              className="material-icons"
              onClick={undefined}
            >
              close
            </styled.i>,
            <h2>
              Hello yes helloooo
            </h2>,
            <p>
              Modal test text
            </p>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "close",
              "className": "material-icons",
              "onClick": undefined,
            },
            "ref": null,
            "rendered": "close",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Hello yes helloooo",
            },
            "ref": null,
            "rendered": "Hello yes helloooo",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Modal test text",
            },
            "ref": null,
            "rendered": "Modal test text",
            "type": "p",
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
